<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>be.cetic</groupId>
    <artifactId>ddolib</artifactId>
    <version>0.0.4</version>
    <packaging>jar</packaging>

    <name>${project.groupId}:${project.artifactId}</name>
    <description>Discrete Optimization Library based on Decision Diagrams</description>
    <url>https://github.com/DDOLIB-CETIC-UCL/DDOLib</url>

    <organization>
        <name>CETIC-UCLouvain</name>
        <url>https://github.com/DDOLIB-CETIC-UCL/DDOLib</url>
    </organization>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/license/mit</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Renaud De Landtsheer</name>
            <email>renaud.delandtsheer@cetic.be</email>
            <organization>CETIC / COAL</organization>
            <organizationUrl>https://www.cetic.be</organizationUrl>
        </developer>
        <developer>
            <name>Thomas Fayolle</name>
            <email>thomas.fayolle@cetic.be</email>
            <organization>CETIC / COAL</organization>
            <organizationUrl>https://www.cetic.be</organizationUrl>
        </developer>
        <developer>
            <name>Fabian Germeau</name>
            <email>fabian.germeau@cetic.be</email>
            <organization>CETIC / COAL</organization>
            <organizationUrl>https://www.cetic.be</organizationUrl>
        </developer>
        <developer>
            <name>Quentin Meurisse</name>
            <email>quentin.meurisse@cetic.be</email>
            <organization>CETIC / COAL</organization>
            <organizationUrl>https://www.cetic.be</organizationUrl>
        </developer>
        <developer>
            <name>Stefano Michelini</name>
            <email>stefano.michelini@cetic.be</email>
            <organization>CETIC / COAL</organization>
            <organizationUrl>https://www.cetic.be</organizationUrl>
        </developer>
        <developer>
            <name>Pierre Schaus</name>
            <email>pierre.schaus@uclouvain.be</email>
            <organization>UCLouvain / ICTEAM / INGI</organization>
        </developer>
        <developer>
            <name>Roger Kameugne</name>
            <email>roger.kameugne@uclouvain.be</email>
            <organization>UCLouvain / ICTEAM / INGI</organization>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/DDOLIB-CETIC-UCL/DDOLib.git</connection>
        <developerConnection>scm:git:ssh://github.com:DDOLIB-CETIC-UCL/DDOLib.git</developerConnection>
        <url>https://github.com/DDOLIB-CETIC-UCL/DDOLib</url>
    </scm>

    <distributionManagement>
        <repository>
            <id>central</id>
            <name>Maven Central</name>
            <url>https://central.sonatype.com/api/v1/publisher</url>
        </repository>
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <checkstyle.config.location>${basedir}/checkstyle.xml</checkstyle.config.location>
        <junit.bom.version>5.11.0</junit.bom.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
        </dependency>

        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-suite</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.github.haifengl</groupId>
            <artifactId>smile-core</artifactId>
            <version>3.0.1</version>
        </dependency>

        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20250517</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.10</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>post-unit-test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.3</version>
                <configuration>
                    <skipTests>false</skipTests>
                    <includes>
                        <include>**/AllTests.java</include>
                    </includes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.7.0</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <source>21</source>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.6.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <autoPublish>true</autoPublish>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.5.0</version>
            </plugin>

        </plugins>
    </build>

    <profiles>
        <profile>
            <id>non-regression-tests</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <includes>
                                <include>**/NonRegressionTests.java</include>
                            </includes>
                            <argLine>-Xmx5g -Xms1g</argLine>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>